# Edit_Propagation_via_Color_Palettes

./: CMakeLists.txt  README.md  main.cpp
include/palette_optmizer/: geometry.hpp  image.hpp  optim_by_gurobi.hpp  utility.hpp
src/: data.cpp  data.h  editviewwidget.cpp  editviewwidget.h  imagewidget.cpp  imagewidget.h  mainwindow.cpp  mainwindow.h  my_util.h  opengl3dwidget.cpp  openglwidget.cpp  openglwidget.h  paletteviewwidget.cpp  paletteviewwidget.h  rgbwidget.cpp  rgbwidget.h  ui_color_dialog.h  ui_color_palette_widget.h  utility.h  vec3.h
